--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
-cp .env.example .env
+# Supabase Configuration
+SUPABASE_URL=https://seu-projeto.supabase.co
+SUPABASE_PROJECT_REF=seu-ref-id
+SUPABASE_ANON_KEY=sua-anon-key
+SUPABASE_SERVICE_ROLE_KEY=sua-service-role-key
+SUPABASE_DB_PASSWORD=sua-senha
+SUPABASE_ACCESS_TOKEN=seu-access-token
+
+# Email (SendGrid - opcional)
+SENDGRID_API_KEY=
+FROM_EMAIL=noreply@seusite.com.br
+
+# Application
+SITE_URL=http://localhost:3000
+NODE_ENV=development
